# gamebench-desktop

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: copy-dist.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fps_monitor.rs  game_detect.rs  hardware.rs  lib.rs  logs.rs  main.rs
src/lib/: tauri-api.ts  types.ts
src/pages/: Dashboard.tsx  FpsMonitor.tsx  Logs.tsx  Settings.tsx
