[package]
name = "gamebench-desktop"
version = "0.1.0"
description = "GameBench CN - PC游戏性能检测工具"
authors = ["GameBench CN"]
edition = "2021"

[lib]
name = "gamebench_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
fuzzy-matcher = "0.3"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
